# ME_OpenDRT-OFX

./: .gitignore  README.md  manager-release-config.json
.github/workflows/: build-me_opendrt-all-platforms.yml  build-me_opendrt-linux.yml  build-me_opendrt-macos-arm64-safe.yml  build-me_opendrt-macos.yml  build-me_opendrt-windows.yml  build-plugin-manager.yml  deploy-plugin-manager-pages.yml  update-plugin-manager-manifest.yml
ME_OpenDRT/source/: CMakeLists.txt  README.md  sign_release.ps1
ME_OpenDRT/source/cmake/: Info.plist.in
ME_OpenDRT/source/installer/: ME_OpenDRT.iss
ME_OpenDRT/source/src/: OpenDRT.cpp  OpenDRTCPUCore.h  OpenDRTPresets.h  OpenDRTProcessor.h
ME_OpenDRT/source/src/cuda/: OpenDRT.cu
ME_OpenDRT/source/src/metal/: OpenDRT.metal  OpenDRTMetal.h  OpenDRTMetal.mm
ME_OpenDRT/source/src/opencl/: OpenDRT.cl
ME_OpenDRT/source/tools/cube_viewer_stub/: main.cpp
ME_OpenDRT/source/tools/cube_viewer_stub/metal/: OpenDRTViewerMetal.mm
Moaz Elgabry Plugins/: README.md
Moaz Elgabry Plugins/docs/plugins/: index.json
Moaz Elgabry Plugins/docs/plugins/chromaspace/: stable.json
Moaz Elgabry Plugins/docs/plugins/dev/: chromaspace.local.json  me-opendrt.1.2.11.local.json  me-opendrt.bad-checksum.local.json  me-opendrt.older.local.json  me-opendrt.rollback-fail.local.json
Moaz Elgabry Plugins/docs/plugins/me-opendrt/: stable.json
Moaz Elgabry Plugins/docs/updates/: latest.json
Moaz Elgabry Plugins/src-tauri/: tauri.conf.json
Moaz Elgabry Plugins/src-tauri/src/: catalog.rs
